Update frontend.html to use absolute paths for CSS and JS files

--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/realtime.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
+    <link rel="stylesheet" href="/Proyecto_1_Diseno/static/css/base.css">
+    <link rel="stylesheet" href="/Proyecto_1_Diseno/static/css/realtime.css">
+    <link rel="stylesheet" href="/Proyecto_1_Diseno/static/css/sidebar.css">
 </head>
 <body>
     <!-- Elementos ocultos para almacenar datos del sistema -->
@@ -127,8 +127,8 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     
     <!-- Custom JS -->
-     <script src="{{ url_for('static', filename='js/navigation.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/realtime.js') }}"></script>
+     <script src="/Proyecto_1_Diseno/static/js/navigation.js"></script>
+    <script src="/Proyecto_1_Diseno/static/js/sidebar.js"></script>
+    <script src="/Proyecto_1_Diseno/static/js/realtime.js"></script>
 </body>
 </html>
