--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -96,7 +96,7 @@
     <!-- Contenedor principal -->
     <div id="mainContent" class="main-content">
         <div class="container">
-            <h1>Rastreador versión estable 2.2 - {{ name }} - Histórico</h1>
+            <h1>Rastreador {{ name }} - Histórico</h1>
 
             <!-- Historical query section -->
             <div class="historical-section">
