--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -135,7 +135,7 @@
     <!-- Contenedor principal -->
     <div id="mainContent" class="main-content">
         <div class="container">
-            <h1>Rastreador {{ name }} - Histórico</h1>
+            <h1>Rastreador Hakuna mamatata {{ name }} - Histórico</h1>
 
             <!-- Historical controls (hidden by default) -->
             <div class="historical-controls" id="historicalControls">
