Update historical.js path in frontend_historical.html and adjust timestamp handling for Colombia timezone

--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -180,6 +180,6 @@
     <!-- IMPORTANTE: navigation.js debe cargarse ANTES de sidebar.js -->
     <script src="{{ get_static_path('js/navigation.js') }}"></script>
     <script src="{{ get_static_path('js/sidebar.js') }}"></script>
-    <script src="{{ get_static_path('js/historical.js') }}"></script>
+    <script src="/Proyecto_1_Diseno/static/js/historical.js"></script>
 </body>
 </html>
