--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     
     <!-- Custom CSS - Rutas resueltas en el servidor -->
-    <link rel="stylesheet" href="/Proyecto_1_Diseno/static/css/base.css">
-    <link rel="stylesheet" href="/Proyecto_1_Diseno/static/css/realtime.css">
-    <link rel="stylesheet" href="/Proyecto_1_Diseno/static/css/sidebar.css">
+    <link rel="stylesheet" href="{{ get_static_path('css/base.css') }}">
+    <link rel="stylesheet" href="{{ get_static_path('css/realtime.css') }}">
+    <link rel="stylesheet" href="{{ get_static_path('css/sidebar.css') }}">
     
     <!-- Variable global para JavaScript -->
     <script>
@@ -133,8 +133,8 @@
     
     <!-- Custom JS - Rutas resueltas en el servidor -->
     <!-- IMPORTANTE: navigation.js debe cargarse ANTES de sidebar.js -->
-    <script src="/Proyecto_1_Diseno/static/js/navigation.js"></script>
-    <script src="/Proyecto_1_Diseno/static/js/sidebar.js"></script>
-    <script src="/Proyecto_1_Diseno/static/js/realtime.js"></script>
+    <script src="{{ get_static_path('js/navigation.js') }}"></script>
+    <script src="{{ get_static_path('js/sidebar.js') }}"></script>
+    <script src="{{ get_static_path('js/realtime.js') }}"></script>
 </body>
 </html>
