Add cancel button for route generation and display query info on map actions

--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -171,6 +171,7 @@
                 <div id="routeProgressBar" class="route-progress-bar" style="width: 0%"></div>
                 <div id="routeProgressText" class="route-progress-text">0 / 0 segmentos</div>
             </div>
+            <button id="cancelRouteBtn" class="btn-cancel">Cancelar</button>
         </div>
     </div>
 
