--- a/Proyecto_1_Diseno/static/css/historical.css
+++ b/Proyecto_1_Diseno/static/css/historical.css
@@ -435,3 +435,53 @@
         flex-direction: column;
     }
 }
+
+.btn-cancel {
+    background-color: transparent;
+    border: 1px solid var(--color-secondary);
+    color: var(--color-secondary);
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    font-family: inherit;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.btn-cancel:hover {
+    background-color: var(--color-light);
+    color: var(--color-primary);
+}
+
+.query-info {
+    position: absolute;
+    bottom: 20px; /* Ajustar si se superpone con los controles de zoom */
+    left: 80px; /* Ajustar para que no esté pegado al borde */
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 6px 12px;
+    border-radius: 4px;
+    z-index: 800; /* Debajo de los controles de Leaflet */
+    font-size: 0.8rem;
+    font-weight: 600;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.query-info.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* Ajuste para móvil */
+@media (max-width: 768px) {
+    .query-info {
+        bottom: 70px; /* Sobre la barra de info */
+        left: 10px;
+        width: calc(100% - 20px);
+        text-align: center;
+    }
+}
