Name changed for html

--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -124,7 +124,7 @@
 
     <div id="mainContent" class="main-content">
         <div class="container">
-            <h1>Rastreador prueba {{ name }} - Histórico</h1>
+            <h1>Rastreador {{ name }} - Histórico</h1>
 
             <div class="historical-controls" id="historicalControls">
                 <button class="btn" onclick="toggleMarcadores()">
